...
      <Tabs.Screen
        name="market"
        options={{
          title: 'Marche',
          headerShown: false,
          tabBarIcon: ({ focused }) => <TabIcon name="market" focused={focused} />,
          tabBarButtonTestID: 'onglet-marche',
        }}
      />
      <Tabs.Screen
        name="wallet"
        options={{
          title: 'Portefeuille',
          headerShown: false,
          tabBarIcon: ({ focused }) => <TabIcon name="wallet" focused={focused} />,
          tabBarButtonTestID: 'onglet-portefeuille',
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: 'Profil',
...
